pw: respect path specified using -V when writing pw.conf, and -C is not explicitly specified.  -V path is already used to determine which file to read default values from, so it's only logical to write them to the same file.

PR:		231653
Reviewed by:	eugen, bapt
Approved by:	re (gjb), kib (mentor)
Differential Revision:	https://reviews.freebsd.org/D17566